[gd_scene load_steps=11 format=3 uid="uid://bfhaeb1non83h"]

[ext_resource type="Script" path="res://scripts/daily_report.gd" id="1_osdtj"]
[ext_resource type="FontFile" uid="uid://dqfmsx57swhle" path="res://assets/IndieFlower-Regular.ttf" id="2_dcfpf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_44ksm"]
bg_color = Color(0.93197, 0.916459, 0.874442, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2e58i"]
bg_color = Color(0.933333, 0.921569, 0.886275, 0.627451)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
expand_margin_left = 4.0
expand_margin_right = 4.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_f5mrb"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_73cw4"]
bg_color = Color(0.971484, 0.964737, 0.946103, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.0784314, 0.0784314, 0.0784314, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7rhhi"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_satt0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qhscb"]
bg_color = Color(0.972549, 0.964706, 0.945098, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.0768358, 0.0768358, 0.0768358, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xs5vu"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[node name="DailyReport" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_osdtj")

[node name="ReportBackground" type="Panel" parent="."]
custom_minimum_size = Vector2(1, 1)
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
theme_override_styles/panel = SubResource("StyleBoxFlat_44ksm")

[node name="Tutorial" type="Label" parent="ReportBackground"]
visible = false
z_index = 2
layout_mode = 0
offset_left = 845.0
offset_top = 547.0
offset_right = 989.0
offset_bottom = 574.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("2_dcfpf")
theme_override_styles/normal = SubResource("StyleBoxFlat_2e58i")
text = "Go to permit shop"
horizontal_alignment = 1

[node name="TutorialComplete" type="Label" parent="ReportBackground"]
visible = false
z_index = 2
layout_mode = 0
offset_left = 863.0
offset_top = 516.0
offset_right = 1112.0
offset_bottom = 569.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("2_dcfpf")
theme_override_styles/normal = SubResource("StyleBoxFlat_2e58i")
text = "You've completed the tutorial! 
Congratulations, and good luck!"
horizontal_alignment = 1

[node name="NextDayButton" type="Button" parent="."]
layout_mode = 0
offset_left = 1010.0
offset_top = 585.0
offset_right = 1138.0
offset_bottom = 635.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("2_dcfpf")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_f5mrb")
theme_override_styles/hover = SubResource("StyleBoxFlat_73cw4")
theme_override_styles/pressed = SubResource("StyleBoxFlat_7rhhi")
theme_override_styles/focus = SubResource("StyleBoxEmpty_satt0")
text = "Next Day"

[node name="PermitsButton" type="Button" parent="."]
layout_mode = 0
offset_left = 832.0
offset_top = 585.0
offset_right = 1003.0
offset_bottom = 635.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("2_dcfpf")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_f5mrb")
theme_override_styles/hover = SubResource("StyleBoxFlat_qhscb")
theme_override_styles/pressed = SubResource("StyleBoxFlat_xs5vu")
theme_override_styles/focus = SubResource("StyleBoxEmpty_satt0")
text = "Shop Permits"

[node name="SaveButton" type="Button" parent="."]
layout_mode = 0
offset_left = 173.0
offset_top = 584.0
offset_right = 247.0
offset_bottom = 634.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("2_dcfpf")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_f5mrb")
theme_override_styles/hover = SubResource("StyleBoxFlat_qhscb")
theme_override_styles/pressed = SubResource("StyleBoxFlat_xs5vu")
theme_override_styles/focus = SubResource("StyleBoxEmpty_satt0")
text = "Save"

[node name="SaveQuitButton" type="Button" parent="."]
layout_mode = 0
offset_left = 15.0
offset_top = 584.0
offset_right = 167.0
offset_bottom = 634.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("2_dcfpf")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_f5mrb")
theme_override_styles/hover = SubResource("StyleBoxFlat_qhscb")
theme_override_styles/pressed = SubResource("StyleBoxFlat_xs5vu")
theme_override_styles/focus = SubResource("StyleBoxEmpty_satt0")
text = "Save & Quit"

[node name="Label" type="Label" parent="."]
layout_mode = 2
offset_left = 470.0
offset_top = 10.0
offset_right = 683.0
offset_bottom = 60.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("2_dcfpf")
theme_override_font_sizes/font_size = 36
text = "Daily Report"
horizontal_alignment = 1

[node name="VBoxContainerCustomers" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 455.0
offset_top = 75.0
offset_right = 692.0
offset_bottom = 206.0
alignment = 1

[node name="CurrentDay" type="Label" parent="VBoxContainerCustomers"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("2_dcfpf")
theme_override_font_sizes/font_size = 28
text = "Day: 0"
horizontal_alignment = 1

[node name="BlankSpaceCus" type="Label" parent="VBoxContainerCustomers"]
layout_mode = 2
theme_override_font_sizes/font_size = 8
horizontal_alignment = 1

[node name="CustomersServed" type="Label" parent="VBoxContainerCustomers"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("2_dcfpf")
theme_override_font_sizes/font_size = 24
text = "Customers Served: 0"
horizontal_alignment = 1

[node name="CustomersLost" type="Label" parent="VBoxContainerCustomers"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("2_dcfpf")
theme_override_font_sizes/font_size = 24
text = "Customers Lost: 0"
horizontal_alignment = 1

[node name="VBoxContainerMoney" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 150.0
offset_top = 220.0
offset_right = 501.0
offset_bottom = 482.0
alignment = 1

[node name="Sales" type="Label" parent="VBoxContainerMoney"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("2_dcfpf")
theme_override_font_sizes/font_size = 24
text = "Sales: $0.00"

[node name="Tips" type="Label" parent="VBoxContainerMoney"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("2_dcfpf")
theme_override_font_sizes/font_size = 24
text = "Tips: $0.00"

[node name="IngredientCost" type="Label" parent="VBoxContainerMoney"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("2_dcfpf")
theme_override_font_sizes/font_size = 24
text = "Ingredient Costs: $0.00"

[node name="UnlockedIngredientCost" type="Label" parent="VBoxContainerMoney"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("2_dcfpf")
theme_override_font_sizes/font_size = 24
text = "Ingredient Unlock Costs: $0.00"

[node name="NetProfit" type="Label" parent="VBoxContainerMoney"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("2_dcfpf")
theme_override_font_sizes/font_size = 24
text = "Net Profit: $0.00"

[node name="BlankSpaceMon" type="Label" parent="VBoxContainerMoney"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1

[node name="TotalCurrency" type="Label" parent="VBoxContainerMoney"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("2_dcfpf")
theme_override_font_sizes/font_size = 24
text = "Total Currency: $0.00"

[node name="VBoxContainerRep" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 700.0
offset_top = 220.0
offset_right = 1048.0
offset_bottom = 482.0
alignment = 1

[node name="ReputationPointsEarned" type="Label" parent="VBoxContainerRep"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("2_dcfpf")
theme_override_font_sizes/font_size = 24
text = "Reputation Points Earned: 0"

[node name="SpeedBonus" type="Label" parent="VBoxContainerRep"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("2_dcfpf")
theme_override_font_sizes/font_size = 24
text = "Speed Bonus: 0"

[node name="ReputationPointsLost" type="Label" parent="VBoxContainerRep"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("2_dcfpf")
theme_override_font_sizes/font_size = 24
text = "Reputation Points Lost: 0"

[node name="NetReputationGain" type="Label" parent="VBoxContainerRep"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("2_dcfpf")
theme_override_font_sizes/font_size = 24
text = "Net Reputation Gain: 0"

[node name="BlankSpaceRep" type="Label" parent="VBoxContainerRep"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1

[node name="TotalReputation" type="Label" parent="VBoxContainerRep"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("2_dcfpf")
theme_override_font_sizes/font_size = 24
text = "Total Reputation: 0"

[node name="ReputationTier" type="Label" parent="VBoxContainerRep"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("2_dcfpf")
theme_override_font_sizes/font_size = 24
text = "Reputation Tier: Bun Beginner"

[connection signal="pressed" from="NextDayButton" to="." method="_on_next_day_button_pressed"]
[connection signal="pressed" from="PermitsButton" to="." method="_on_permits_button_pressed"]
[connection signal="pressed" from="SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="SaveQuitButton" to="." method="_on_save_quit_button_pressed"]
